# Rust-CLI-with-SQLite

./: README.md
.github/workflows/: CI.yml  build.yml  lint.yml  test.yml
data/: movies.csv
sqlite/: Cargo.toml  movies.db
sqlite/src/: lib.rs  main.rs
