[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }